basic hex grid in css

--- a/views/game_board.haml
+++ b/views/game_board.haml
@@ -2,5 +2,14 @@
 %html
   %head
     %title ThunderLight
+    %link(rel="stylesheet" href="/css/hexgrid.css")
   %body
     %h1 ThunderLight
+    #gameboard
+      - (0..3).each do
+        .hexrow
+          - (0..7).each do
+            %div
+              %span cell text
+              %div
+              %div
