--- a/public/css/hexgrid.css
+++ b/public/css/hexgrid.css
@@ -1,39 +1,65 @@
 /* Based on https://stackoverflow.com/questions/10062887/generate-repeating-hexagonal-pattern-with-css3
 */
 
-body {
-  background-color: #111;
-  color: #eee;
-}
+/* cell size */
 
-/* hex grid */
-
-.hexrow {
-  white-space: nowrap;
+.hexrow { /* cell spacing */
   /*right/left margin set at (( width of child div x sin(30) ) / 2) makes a fairly tight fit; a 3px bottom seems to match*/
-  margin: 0 25px 3px; 
+  margin: 0 1.2em 0.3em; 
 }
 
 .hexrow > div {
-  width: 100px;
-  height: 173.2px; /* ( width x cos(30) ) x 2 */
+  width: 5em;
+  height: 8.66em; /* ( width x cos(30) ) x 2 */
   /* For margin:
   right/left = ( width x sin(30) ) makes no overlap 
   right/left = (( width x sin(30) ) / 2) leaves a narrow separation
   */
-  margin: 0 25px; 
-  position: relative;
-  text-align: center;
-  line-height: 173.2px; /*equals height*/
-  display: inline-block;
+  margin: 0 1.25em; 
+  line-height: 8.66em; /*equals height*/
 }
 
 .hexrow > div:nth-child(odd) {
-  top: 43.3px; /* ( width x cos(30) / 2 ) */
+  top: 2.165em; /* ( width x cos(30) / 2 ) */
 }
 
 .hexrow > div:nth-child(even) {
-  top: -44.8px; /* -1 x( ( width x cos(30) / 2) + (hexrow bottom margin / 2)) */ 
+  top: -2.24em; /* -1 x( ( width x cos(30) / 2) + (hexrow bottom margin / 2)) */ 
+}
+
+.hexrow > div > div:first-of-type:before {
+  width: 10em; /* width of main + margin sizing */
+  -ms-transform:rotate(-60deg) translate(-7.5em, 0); /* IE 9 */
+  -moz-transform:rotate(-60deg) translate(-7.5em, 0); /* Firefox */
+  -webkit-transform:rotate(-60deg) translate(-7.5em, 0); /* Safari and Chrome */
+  -o-transform:rotate(-60deg) translate(-7.5em, 0); /* Opera */
+  transform:rotate(-60deg) translate(-7.5em, 0);
+}
+
+.hexrow > div > div:last-of-type:before {
+  width: 10em; /* starting width + margin sizing */
+  /*translate properties are initial width (10em) and half height (173.2 / 2 = 86.6) */
+  -ms-transform:rotate(60deg) translate(10em, 4.33em); /* IE 9 */
+  -moz-transform:rotate(60deg) translate(10em, 4.33em); /* Firefox */
+  -webkit-transform:rotate(60deg) translate(10em, 4.33em); /* Safari and Chrome */
+  -o-transform:rotate(60deg) translate(10em, 4.33em); /* Opera */
+  transform:rotate(60deg) translate(10em, 4.33em);
+}
+
+.hexrow > div > span {
+  margin: 0 -1.5em;
+}
+
+/* cell layout */
+
+.hexrow {
+  white-space: nowrap;
+}
+
+.hexrow > div {
+  position: relative;
+  text-align: center;
+  display: inline-block;
 }
 
 .hexrow > div > div:first-of-type {
@@ -56,18 +82,11 @@ body {
 .hexrow > div > div:first-of-type:before {
   content: '';
   position: absolute;
-  width: 200px; /* width of main + margin sizing */
   height: 100%;
   background: inherit;
   bottom: 0;
   left: 0;
   z-index: 1;
-  
-  -ms-transform:rotate(-60deg) translate(-150px, 0); /* IE 9 */
-  -moz-transform:rotate(-60deg) translate(-150px, 0); /* Firefox */
-  -webkit-transform:rotate(-60deg) translate(-150px, 0); /* Safari and Chrome */
-  -o-transform:rotate(-60deg) translate(-150px, 0); /* Opera */
-  transform:rotate(-60deg) translate(-150px, 0);
   
   -ms-transform-origin: 0 0; /* IE 9 */
   -webkit-transform-origin: 0 0; /* Safari and Chrome */
@@ -97,7 +116,6 @@ body {
 .hexrow > div > div:last-of-type:before {
   content: '';
   position: absolute;
-  width: 200px; /* starting width + margin sizing */
   height: 100%;
   background-image: inherit;
   background-position: 0 0;
@@ -106,13 +124,6 @@ body {
   bottom: 0;
   left: 0;
   z-index: 1;
-  
-  /*translate properties are initial width (100px) and half height (173.2 / 2 = 86.6) */
-  -ms-transform:rotate(60deg) translate(100px, 86.6px); /* IE 9 */
-  -moz-transform:rotate(60deg) translate(100px, 86.6px); /* Firefox */
-  -webkit-transform:rotate(60deg) translate(100px, 86.6px); /* Safari and Chrome */
-  -o-transform:rotate(60deg) translate(100px, 86.6px); /* Opera */
-  transform:rotate(60deg) translate(100px, 86.6px);
   
   -ms-transform-origin: 100% 0; /* IE 9 */
   -webkit-transform-origin: 100% 0; /* Safari and Chrome */
@@ -123,13 +134,17 @@ body {
 
 .hexrow > div > span {
   display: inline-block;
-  margin: 0 -30px;
   line-height: 1.1;
   vertical-align: middle;
   white-space: normal; 
 }
 
 /* colours */
+
+body {
+  background-color: #222;
+  color: #eee;
+}
 
 .hexrow > div {
   background-color: #000;
