--- a/views/game_board.haml
+++ b/views/game_board.haml
@@ -11,5 +11,5 @@
           - (0..7).each do
             %div
               %span cell text
-              %div
-              %div
+              .leftwing
+              .rightwing
