--- a/public/css/hexgrid.css
+++ b/public/css/hexgrid.css
@@ -3,6 +3,10 @@
 
 /* cell size */
 
+#gameboard {
+  margin-top: 2.5em; /* 2.24 + bit more */
+}
+
 .hexrow { /* cell spacing */
   /*right/left margin set at (( width of child div x sin(30) ) / 2) makes a fairly tight fit; a 3px bottom seems to match*/
   margin: 0 1.2em 0.3em; 
