--- a/public/css/hexgrid.css
+++ b/public/css/hexgrid.css
@@ -1,3 +1,7 @@
+body {
+  font-family: sans-serif;
+}
+
 /* Based on https://stackoverflow.com/questions/10062887/generate-repeating-hexagonal-pattern-with-css3
 */
 
@@ -9,7 +13,7 @@
 
 .hexrow { /* cell spacing */
   /*right/left margin set at (( width of child div x sin(30) ) / 2) makes a fairly tight fit; a 3px bottom seems to match*/
-  margin: 0 1.2em 0.3em; 
+  margin: 0 1.2em 0.2em; 
 }
 
 .hexrow > div {
@@ -19,7 +23,7 @@
   right/left = ( width x sin(30) ) makes no overlap 
   right/left = (( width x sin(30) ) / 2) leaves a narrow separation
   */
-  margin: 0 1.25em; 
+  margin: 0 1.22em; 
   line-height: 8.66em; /*equals height*/
 }
 
@@ -156,4 +160,20 @@ body {
 
 .hexrow div:hover, .hexrow div:hover > div, #a1 > div:hover { /* hover hilight */
   background-color: #333;
+}
+
+.coordinates {
+  color: #444;
+}
+
+/* units */
+
+.hexrow > div > span > .unit {
+  display: inline-block;
+  margin: 0.1em 0;
+  padding: 0.1em;
+  background: #000;
+  border: solid 1px #555;
+  border-radius: 5px;
+  font-size: 90%;
 }
