vector editor buttons

--- a/views/game_board.haml
+++ b/views/game_board.haml
@@ -28,3 +28,27 @@
                     %br
               .leftwing
               .rightwing
+    #vectordialog
+      %table.vectorselector
+        %tr.top
+          %td
+          %td
+            %button.n N
+          %td
+        %tr.middle
+          %td
+            %button.nw NW
+          %td
+          %td
+            %button.ne NE
+        %tr.middle
+          %td
+            %button.sw SW
+          %td
+          %td
+            %button.se SE
+        %tr.bottom
+          %td
+          %td
+            %button.s S
+          %td
