--- a/views/vector_dialog.haml
+++ b/views/vector_dialog.haml
@@ -2,23 +2,33 @@
   %table.vectorselector
     %tr.top
       %td
-      %td
+      %td{colspan: 3}
         %button.n N
       %td
-    %tr.middle
+    %tr.middle.upper
       %td
         %button.nw NW
-      %td
+      %td.label.left
+        +1
+      %td.label.centre
+        +2
+      %td.label.right
+        +3
       %td
         %button.ne NE
-    %tr.middle
+    %tr.middle.lower
       %td
         %button.sw SW
-      %td
+      %td.label.left
+        +1
+      %td.label.centre
+        +2
+      %td.label.right
+        +3
       %td
         %button.se SE
     %tr.bottom
       %td
-      %td
+      %td{colspan: 3}
         %button.s S
       %td
