click handlers for vector directions

--- a/views/vector_dialog.haml
+++ b/views/vector_dialog.haml
@@ -8,22 +8,22 @@
     %tr.middle.upper
       %td
         %button.nw NW
-      %td.label.left
+      %td.label.left.nw
         +1
-      %td.label.centre
+      %td.label.centre.n
         +2
-      %td.label.right
+      %td.label.right.ne
         +3
       %td
         %button.ne NE
     %tr.middle.lower
       %td
         %button.sw SW
-      %td.label.left
+      %td.label.left.sw
         +1
-      %td.label.centre
+      %td.label.centre.s
         +2
-      %td.label.right
+      %td.label.right.se
         +3
       %td
         %button.se SE
