--- a/public/css/vector_dialog.css
+++ b/public/css/vector_dialog.css
@@ -49,8 +49,8 @@
   margin-top: 0.5em;
 }
 
-#vectordialog .nw,
-#vectordialog .se {
+#vectordialog button.nw,
+#vectordialog button.se {
   -ms-transform:rotate(-60deg); /* IE 9 */
   -moz-transform:rotate(-60deg); /* Firefox */
   -webkit-transform:rotate(-60deg); /* Safari and Chrome */
@@ -58,8 +58,8 @@
   transform:rotate(-60deg);
 }
 
-#vectordialog .ne,
-#vectordialog .sw {
+#vectordialog button.ne,
+#vectordialog button.sw {
   -ms-transform:rotate(60deg); /* IE 9 */
   -moz-transform:rotate(60deg); /* Firefox */
   -webkit-transform:rotate(60deg); /* Safari and Chrome */
