jquery ui tweeks in own css file.

--- a/views/game_board.haml
+++ b/views/game_board.haml
@@ -3,6 +3,7 @@
   %head
     %title ThunderLight
     %link(rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/dot-luv/jquery-ui.css")
+    %link(rel="stylesheet" href="/css/jquery-ui-tweeks.css")
     %link(rel="stylesheet" href="/css/hexgrid.css")
     %link(rel="stylesheet" href="/css/vector_dialog.css")
     %script(src="https://code.jquery.com/jquery-2.1.1.min.js")
