crosshair cursor on thrust target cells

--- a/public/css/hexgrid.css
+++ b/public/css/hexgrid.css
@@ -201,6 +201,7 @@ body {
 .hexrow .cell.thrusttarget,
 .hexrow .cell.thrusttarget > div {
   background-color: #883;
+  cursor: crosshair;
 }
 
 .hexrow .cell.thrusttarget:hover,
