--- a/views/game_board.haml
+++ b/views/game_board.haml
@@ -24,14 +24,11 @@
               - else
                 %span
                   - board.units[[x,y]].each do |u|
-                    %p.unit{  uid: u.uid, title: u.title,                    |
-                    thrust_points: u.thrust_points,                          |
-                            coord: [x, y].to_json,                           |
-                           vector: u.vector.to_json,                         |
-                           thrust: (u.thrust.nil? ? '' : u.thrust.to_json) } |
+                    %p.unit{  uid: u.uid, title: u.title, thrust_points: u.thrust_points, |
+                      coord: [x, y].to_json, vector: u.vector.to_json,                    |
+                      next_vector: (u.next_vector.nil? ? '' : u.next_vector.to_json) }    |
                       = u.title
-                      - if !u.vector.nil?
-                        %span.coordinates=u.vector.map{|k,v| "#{k}#{v}"}.join(' ')
+                      %span.coordinates=(u.display_vector || {}).map{|k,v| "#{k}#{v}"}.join(' ')
                     %br
               .leftwing
               .rightwing
