--- a/public/css/hexgrid.css
+++ b/public/css/hexgrid.css
@@ -239,5 +239,32 @@ body {
 }
 
 .hexrow .unit.inprogress {
-  background: #f30;
+  -webkit-animation-name: unit_pulsate;
+  -webkit-animation-timing-function: ease-in-out;
+  -webkit-animation-duration: 0.3s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-direction: alternate;
+  animation-name: unit_pulsate;
+  animation-timing-function: ease-in-out;
+  animation-duration: 0.3s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@-webkit-keyframes unit_pulsate {
+  from {
+    background-color: #000;
+  }
+  to {
+    background-color: #f30;
+  }
+}
+
+@keyframes unit_pulsate {
+  from {
+    background-color: #000;
+  }
+  to {
+    background-color: #f30;
+  }
 }
