--- a/views/game_board.haml
+++ b/views/game_board.haml
@@ -12,7 +12,9 @@
     %script(src="/js/vector_editor.js")
   %body
     #toolbar
-      %p=board.turn_number
+      .turncounter
+        %span.label turn
+        %span.value=board.turn_number
       %form{action: '/game_board/tick', method: 'POST'}
         %input.tick{type: 'submit', value: 'Tick'}
     #gameboard
