game boards get a title

--- a/views/board.haml
+++ b/views/board.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title ThunderLight
+    %title #{board.title} - Thunderlight
     %link(rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/dot-luv/jquery-ui.css")
     %link(rel="stylesheet" href="/css/jquery-ui-tweeks.css")
     %link(rel="stylesheet" href="/css/hexgrid.css")
