show units that are awaiting movement

--- a/public/css/hexgrid.css
+++ b/public/css/hexgrid.css
@@ -248,6 +248,10 @@ body {
   color: #ff0;
 }
 
+.hexrow .unit.awaitingmovement {
+  border: solid 0.4em #aa0;
+}
+
 .hexrow .unit.selected {
   border: solid 0.5em #55f;
 }
